fix footer/texte spacing

--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -24,22 +24,22 @@ h1 {
   font-size: 24px;
   font-family: var(--dosis);
   color: #000000;
-  margin-left: 10px;
+  margin-left: 22px;
 }
 
 h2 {
   font-size: 20px;
   font-family: var(--dosis);
   color: #000000;
-  margin-left: 10px;
+  margin-left: 22px;
 }
 
 p {
   font-size: 16px;
   font-family: var(--dosis);
   color: #000000;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 22px;
+  margin-right: 22px;
 }
 
 .main__nav--ul__ap {
