--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -3,8 +3,8 @@
     height: 100%;
     background-color: #007548;
     display: flex;
-    justify-content: space-between;  
-}
+    justify-content: space-between;
+  }
 
 .logo {
     display: block;
@@ -23,7 +23,7 @@
  }
 
   .header__nav {
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
@@ -46,3 +46,4 @@
 .header__nav--ul a {
     color: blanchedalmond;
 }
+
